// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`megarepo CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid shell 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Invalid value for flag --shell: "nope". Expected: "bash" | "zsh" | "fish" (mr 0.1.0)
~effect/cli/CliError/ShowHelp: Help requested

",
  "stdout": "DESCRIPTION
  Output environment variables for shell integration

USAGE
  mr env [flags]

FLAGS
  --shell choice         Shell type for output format (choices: bash, zsh, fish)
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
  --cwd string                                                        Override the working directory
",
}
`;

exports[`megarepo CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid shell with json output (stdout guard) 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "DESCRIPTION
  Output environment variables for shell integration

USAGE
  mr env [flags]

FLAGS
  --shell choice         Shell type for output format (choices: bash, zsh, fish)
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
  --cwd string                                                        Override the working directory

ERROR
  Invalid value for flag --shell: "nope". Expected: "bash" | "zsh" | "fish" (mr 0.1.0)
~effect/cli/CliError/ShowHelp: Help requested

",
  "stdout": "",
}
`;

exports[`megarepo CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing required repo 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Missing required argument: repo (mr 0.1.0)
~effect/cli/CliError/ShowHelp: Help requested

",
  "stdout": "DESCRIPTION
  Add a new member repository

USAGE
  mr add [flags] <repo>

ARGUMENTS
  repo string    Repository reference (github shorthand, URL, or path)

FLAGS
  --name, -n string      Override the member name (defaults to repo name)
  --sync, -s             Sync the added repo immediately
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
  --cwd string                                                        Override the working directory
",
}
`;

exports[`megarepo CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Multi-repo workspace management tool

USAGE
  mr <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
  --cwd string                                                        Override the working directory

SUBCOMMANDS
  init        Initialize a new megarepo in the current directory
  root        Print the megarepo root directory
  env         Output environment variables for shell integration
  status      Show workspace status and member states
  ls          List all members in the megarepo
  check       Check that the megarepo is structurally valid
  fetch       Remote → Lock: fetch upstream refs, resolve commits, write lock. Use --apply to also materialize workspace.
  apply       Lock → Workspace: create worktrees from lock, symlink, nix lock sync, generators. Never writes lock.
  lock        Workspace → Lock: record current worktree HEAD commits into megarepo.lock.
  add         Add a new member repository
  config      Configuration operations: push refs, pin/unpin members
  exec        Execute a command in member directories
  store       Manage the shared git store
  generate    Generate configuration files
  deps        Show the Nix input dependency graph between megarepo members.
",
}
`;

exports[`megarepo CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > store help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Manage the shared git store

USAGE
  mr store <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
  --cwd string                                                        Override the working directory

SUBCOMMANDS
  add         Add a repository to the store (without adding to megarepo)
  ls          List repositories in the store
  status      Show store status and detect issues
  fetch       Fetch all repositories in the store
  gc          Garbage collect unused worktrees
  fix         Fix store issues
  lease       Run a command while holding a store deletion lease
  worktree    Manage worktrees in the store
",
}
`;

exports[`megarepo CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "mr v0.1.0
",
}
`;
